# MicroNT

./: .gitignore  CMakeLists.txt  README.md  unblock_scripts.ps1
assets/icons/: LICENSE.txt
boot/: CMakeLists.txt  boot.asm  kernel_entry.asm
boot/grub/: grub.cfg
boot/uefi/: bootloader.c  bootloader.cpp  efi.h  elf64.h  uefi.h
cmake/: Toolchain-kernel.cmake
docs/: ARCHITECTURE.md  BUILDING.md  COMPATIBILITY.md  DEBUGGING.md  ROADMAP.md  VIRTUALBOX.md
kernel/: CMakeLists.txt  linker.ld
kernel/core/: debug.cpp  kernel_main.cpp  panic.cpp  shareduserdata.cpp
kernel/hal/x64/: cpu.cpp  gdt.cpp  idt.cpp  interrupts.asm  irq.cpp  keyboard.cpp  mouse.cpp  pic.cpp  pit.cpp  serial.cpp  vga.cpp  vmsvga.cpp
kernel/include/: appmodel.h  boot_info.h  bootinfo.h  csrss.h  debug.h  desktop_icons.h  desktopmodel.h  displaycfg.h  dwm.h  explorer.h  hal.h  inputhost.h  io.h  memory.h  ntdef.h  ntstatus.h  object.h  pe.h  process.h  profile.h  registry.h  services.h  session.h  shareduserdata.h  shella11y.h  shellact.h  shellcommands.h  shellhost.h  shellinput.h  shellnotify.h  shellplaces.h  shellpower.h  shellstart.h  shelltaskbar.h  shelltray.h  spinlock.h  sync.h  userinit.h  uxtheme.h  vmsvga.h  (+4 more)
kernel/io/: console.cpp  vfs.cpp
kernel/ldr/: extra_pe.h  hello10_pe.h  hello2_pe.h  hello3_pe.h  hello4_pe.h  hello5_pe.h  hello6_pe.h  hello7_pe.h  hello8_pe.h  hello9_pe.h  hello_pe.h  kernel32_pe.h  ntdll_pe.h  pe_loader.cpp  shell_pe.h  win32test_pe.h  winapp_pe.h  wintest_pe.h
kernel/mm/: heap.cpp  physical_memory.cpp  virtual_memory.cpp
kernel/ob/: object_manager.cpp
kernel/ps/: process.cpp  scheduler.cpp  switch.asm
kernel/rtl/: string.cpp
kernel/sm/: appmodel.cpp  csrss.cpp  explorer.cpp  inputhost.cpp  profile.cpp  registry.cpp  services.cpp  session_manager.cpp  shellhost.cpp  userinit.cpp  winlogon.cpp
kernel/sync/: event.cpp
kernel/syscall/: syscall.cpp  syscall_entry.asm
kernel/win32k/: compositor.cpp  desktopmodel.cpp  displaycfg.cpp  dwm.cpp  shella11y.cpp  shellact.cpp  shellcommands.cpp  shellinput.cpp  shellnotify.cpp  shellplaces.cpp  shellpower.cpp  shellstart.cpp  shelltaskbar.cpp  shelltray.cpp  uxtheme.cpp  windowmgr.cpp  winsta.cpp
scripts/: attach-iso.ps1  build-user.ps1  build.ps1  clean.ps1  create-vbox-vm.ps1  debug-serial.ps1  install-tools.ps1  make-iso.ps1  run-interactive.ps1  run-virtualbox.ps1  setup-and-test.ps1
tools/: inspect_vhd.py  mkdisk.py  mkiso.py  pe2h.py  svg2icons.py
tools/peinspect/: main.cpp
user/apps/hello/: main.cpp
user/hello/: hello.cpp
user/kernel32/: kernel32.cpp
user/ntdll/: ntdll.cpp
user/test/: extra.cpp  win32test.cpp  winapp.cpp  wintest.cpp
